--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+         <script type="text/javascript" src="data.js"></script>
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
