--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <!--[if lt IE 9]>
           <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+        <script type="text/javascript" src="prototype.js"></script>
+        
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
          <script type="text/javascript" src="data.js"></script>
         <script type="text/javascript" src="index.js"></script>
